--- a/the boys.html
+++ b/the boys.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>MOVIES</title>
+    <title>The Boys | MOVIES</title>
 </head>
 
 <body>
@@ -57,9 +57,10 @@
                 <h3 id="rate"><span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</h3>
             </div>
             <div class="btns">
-
                 <a href="#" id="play">Watch <i class="bi bi-play-fill"></i></a>
-                <a href="#" id="download_main"> <i class="bi bi-cloud-arrow-down-fill"></i></a>
+                <a href="#" download="The Boys 480ph" id="low_q">480ph</a>
+                <a href="#" download="The Boys 720ph" id="medium_q">720ph</a>
+                <a href="#" download="The Boys 1080ph" id="high_q">1080ph</a>
             </div>
         </div>
         <section>
@@ -67,7 +68,7 @@
             <i class="bi bi-chevron-left"></i>
             <i class="bi bi-chevron-right"></i>
             <div class="cards">
-                <!-- <a href="#" class="card">
+                <a href="#" class="card">
                     <img src="img/the boys.jpg" alt="" class="poster">
                     <div class="rest_card">
                         <img src="img/the boys1.jpg" alt="">
@@ -79,11 +80,30 @@
                             </div>
                         </div>
                     </div>
-                </a> -->
+                </a>
             </div>
         </section>
     </header>
     <script src="app.js"></script>
+    <script>
+        fetch(json_url).then((Response) => Response.json())
+            .then(data => {
+                let movie_array = data.filter(ele => {
+                    return ele.name === "The Boys";
+                });
+
+                document.getElementById('title').innerText = movie_array[0].name;
+                // document.getElementsByTagName('video')[0].setAttribute('src', movie_array[0].trailer)
+                // document.getElementsByTagName('video')[0].play();
+                document.getElementById('low_q').href = movie_array[0].low;
+                document.getElementById('medium_q').href = movie_array[0].medium;
+                document.getElementById('high_q').href = movie_array[0].high;
+                document.getElementById('gen').innerText = movie_array[0].genre;
+                document.getElementById('date').innerText = movie_array[0].date;
+                document.getElementById('rate').innerHTML = `<span>IMDB</span><i class="bi bi-star-fill"></i> ${movie_array[0].imdb}`;
+
+            })
+    </script>
 </body>
 
 </html>
